# rlm-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  clippy.toml  deny.toml  rustfmt.toml
.claude/: github-social.local.md
.github/workflows/: ci.yml  release.yml
.rlm/: rlm-state.db
Formula/: rlm-rs.rb
docs/: api.md  architecture.md  cli-reference.md  plugin-integration.md  rlm-inspired-design.md
docs/adr/: 011-error-handling-with-thiserror.md  012-concurrency-model-with-rayon.md  013-feature-flag-architecture.md  README.md
docs/prompts/: rlm-analyst.md  rlm-orchestrator.md  rlm-synthesizer.md
src/: error.rs  lib.rs  main.rs
src/agent/: prompt.rs
src/chunking/: code.rs  fixed.rs  mod.rs  parallel.rs  semantic.rs  traits.rs
src/cli/: commands.rs  mod.rs  output.rs  parser.rs
src/core/: buffer.rs  chunk.rs  context.rs  mod.rs
src/embedding/: fallback.rs  fastembed_impl.rs  mod.rs
src/fuse/: inodes.rs  mod.rs
src/io/: mod.rs  reader.rs  unicode.rs
src/search/: hnsw.rs  mod.rs  rrf.rs
src/storage/: mod.rs  schema.rs  sqlite.rs  traits.rs
tests/: integration_test.rs
